# test1

./: .gitignore  README.md  create_project.py  demo.py  download_windows.bat  main.py  pyproject.toml  test_ai.py
ai_models/: decision_engine.py  game_ai_model.py  reinforcement_learning.py  smart_ocr.py
config/: config.yaml
starrail_ai/: README.md  main.py
starrail_ai/ai_models/: decision_engine.py  game_ai_model.py  smart_ocr.py
starrail_ai/core/: screen_capture.py
